<resources>
    <string name="app_name">CoVid19</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string-array name="questions">

    </string-array>
    <string name="question1">Qu\'est ce qu\'un Coronavirus?</string>
    <string name="question2">Quels sont les symptômes de la COVID-19 ?</string>
    <string name="question3">Comment la COVID-19 se propage ?</string>
    <string name="question4">Comment puis-je me protéger et éviter que la maladie ne se propage ?</string>
    <string name="question5">Quelle est la probabilité de contracter la COVID-19 ?</string>
    <string name="question6">La COVID-19 doit-elle m’inquiéter ?</string>
    <string name="question7">Qui risque d’être atteint d’une forme grave de la maladie ?</string>
    <string name="question8">Les antibiotiques sont-ils efficaces pour prévenir ou traiter la COVID-19 ?</string>
    <string name="question9">La COVID-19 est-elle la même maladie que le SRAS?</string>
    <string name="question10">Combien de temps dure la période d’incubation de la COVID-19 ?</string>
    <string name="question11">Les êtres humains peuvent-ils contracter la COVID-19 à partir d’une source animale ?</string>
    <string name="question12">Mon animal domestique peut-il me transmettre la COVID-19 ?</string>
    <string name="question13">Combien de temps le virus peut-il survivre sur les surfaces ?</string>
    <string name="question14">Y a-t-il des choses à ne pas faire ?</string>
    <string name="answer1">Les coronavirus forment une vaste famille de virus qui peuvent être pathogènes chez l’homme et chez l’animal. On sait que, chez l’être humain, plusieurs coronavirus peuvent entraîner des infections respiratoires dont les manifestations vont du simple rhume à des maladies plus graves comme le syndrome respiratoire du Moyen-Orient (MERS) et le syndrome respiratoire aigu sévère (SRAS). Le dernier coronavirus qui a été découvert est responsable de la maladie à coronavirus 2019 (COVID-19).</string>
    <string name="answer2">Les symptômes les plus courants de la COVID-19 sont la fièvre, la fatigue et une toux sèche. Certains patients présentent des douleurs, une congestion nasale, un écoulement nasal, des maux de gorge ou une diarrhée. Ces symptômes sont généralement bénins et apparaissent de manière progressive. Certaines personnes, bien qu’infectées, ne présentent aucun symptôme et se sentent bien. La plupart (environ 80 %) des personnes guérissent sans avoir besoin de traitement particulier. Environ une personne sur six contractant la maladie présente des symptômes plus graves, notamment une dyspnée. Les personnes âgées et celles qui ont d’autres problèmes de santé (hypertension artérielle, problèmes cardiaques ou diabète) ont plus de risques de présenter des symptômes graves. Toute personne qui a de la fièvre, qui tousse et qui a des difficultés à respirer doit consulter un médecin. </string>
    <string name="answer3">La COVID-19 est transmise par des personnes porteuses du virus. La maladie peut se transmettre d’une personne à l’autre par le biais de gouttelettes respiratoires expulsées par le nez ou par la bouche lorsqu’une personne tousse ou éternue. Ces gouttelettes peuvent se retrouver sur des objets ou des surfaces autour de la personne en question. On peut alors contracter la COVID-19 si on touche ces objets ou ces surfaces et si on se touche ensuite les yeux, le nez ou la bouche. Il est également possible de contracter la COVID-19 en inhalant des gouttelettes d’une personne malade qui vient de tousser ou d’éternuer. C’est pourquoi il est important de se tenir à plus d’un mètre d’une personne malade.

L’OMS examine les travaux de recherche en cours sur la manière dont la COVID-19 se propage et elle continuera à communiquer les résultats actualisés.</string>
    <string name="answer4">Mesures de protection pour tous

Tenez-vous au courant des dernières informations sur la flambée de COVID-19, disponibles sur le site Web de l’OMS et auprès des autorités de santé publique nationales et locales. Des cas de COVID-19 se sont produits dans de nombreux pays et plusieurs pays ont été touchés par des flambées. En Chine et dans certains autres pays, les autorités sont parvenues à ralentir ou à enrayer la progression de la flambée. Toutefois, l’évolution de la situation est imprévisible et vous devez donc vous tenir régulièrement informé.

Vous pouvez réduire le risque d’être infecté ou de propager la COVID-19 en prenant quelques précautions simples :

    Se laver fréquemment et soigneusement les mains avec une solution hydroalcoolique ou à l’eau et au savon.

Pourquoi ? Se laver les mains avec une solution hydroalcoolique ou à l’eau et au savon tue le virus s’il est présent sur vos mains.

    Maintenir une distance d’au moins un mètre avec les autres personnes qui toussent ou qui éternuent.

Pourquoi ? Lorsqu’une personne tousse ou éternue, elle projette de petites gouttelettes qui peuvent contenir le virus. Si vous êtes trop près, vous pouvez inhaler ces gouttelettes et donc le virus responsable de la COVID-19 si la personne qui tousse en est porteuse.

    Éviter de se toucher les yeux, le nez et la bouche.

Pourquoi ? Les mains sont en contact avec de nombreuses surfaces qui peuvent être contaminées par le virus. Si vous vous touchez les yeux, le nez ou la bouche, le virus peut pénétrer dans votre organisme et vous pouvez tomber malade.

    Veillez à respecter les règles d’hygiène respiratoire et à ce que les personnes autour de vous en fassent autant. En cas de toux ou d’éternuement, il faut se couvrir la bouche et le nez avec le pli du coude, ou avec un mouchoir et jeter le mouchoir immédiatement après.

Pourquoi ? Les gouttelettes respiratoires propagent des virus. En respectant les règles d’hygiène respiratoire, vous protégez les personnes autour de vous de virus tels que ceux responsables du rhume, de la grippe ou de la COVID-19.

    Si vous ne vous sentez pas bien, restez chez vous. En cas de fièvre, de toux et de dyspnée, consultez un médecin après l’avoir appelé. Suivez les instructions des autorités sanitaires locales.

Pourquoi ? Ce sont les autorités nationales et locales qui disposent des informations les plus récentes sur la situation dans la région où vous vous trouvez. Si vous l’appelez, votre médecin pourra vous orienter rapidement vers l’établissement de santé le plus adapté. En outre, cela vous protègera et évitera la propagation de virus et d’autres agents infectieux.

    Informez-vous constamment pour savoir quelles sont les villes ou les zones où la COVID-19 se propage à grande échelle. Si possible, évitez de voyager, en particulier si vous êtes âgé ou diabétique ou si vous avez une maladie cardiaque ou pulmonaire.

Pourquoi ? Le risque de contracter la COVID-19 est plus élevé dans ces régions.
Mesures de protection pour les personnes qui se trouvent ou qui se sont récemment rendues (au cours des 14 derniers jours) dans des régions où la COVID-19 se propage.

    Suivez les conseils présentés ci-dessus (Mesures de protection pour tous)

    Si vous commencez à vous sentir mal et même si vous n’avez que des symptômes bénins (céphalées, légère fièvre (à partir de 37,3 °C) et écoulement nasal modéré), restez chez vous jusqu’à la guérison. Si vous avez absolument besoin que quelqu’un vienne vous ravitailler ou si vous devez sortir, par exemple pour acheter à manger, portez un masque pour éviter d’infecter d’autres personnes.

Pourquoi ? Éviter d’entrer en contact avec d’autres personnes et de se rendre dans des établissements de santé permettra à ces établissements de fonctionner plus efficacement et vous protègera, ainsi que les autres personnes, de la COVID-19 et d’autres maladies virales.

    En cas de fièvre, de toux et de dyspnée, consultez un médecin sans tarder, car il peut s’agir d’une infection respiratoire ou d’une autre affection grave. Appelez votre médecin et indiquez-lui si vous avez récemment voyagé ou été en contact avec des voyageurs.

Pourquoi ? Si vous l’appelez, votre médecin pourra vous orienter rapidement vers l’établissement de santé le plus adapté. En outre, cela vous protègera et évitera la propagation de la COVID-19 et d’autres maladies virales.</string>
    <string name="cases">Cas</string>
    <string name="recovered">Guérison</string>
    <string name="deceased">Décès</string>
    <string name="fever">Fièvre</string>
    <string name="cough">Toux</string>
    <string name="difficulty_breathing">Difficultés Respiratoire</string>
    <string name="muscular">Douleurs Musculaires</string>
    <string name="symptoms_title_1">Qu’est-ce qu’un « nouveau » coronavirus ?</string>
    <string name="symptoms_desc_1">Un nouveau coronavirus (CoV) est une nouvelle souche de coronavirus.

D’abord appelée « nouveau coronavirus 2019 » ou « nCoV-2019 », la maladie provoquée par le nouveau coronavirus identifiée pour la première fois à Wuhan, en Chine, a été rebaptisée « maladie à coronavirus 2019 » (COVID-19) – « CO » pour corona, « VI » pour virus et « D » pour maladie en anglais.

Le virus de la COVID-19 est un nouveau virus de la même famille que d’autres virus tels que le syndrome respiratoire aigu sévère (SRAS) et certains types de rhumes courants.</string>
    <string name="symptoms_title_2">Quels sont les symptômes du coronavirus ?</string>
    <string name="symptoms_desc_2">Les symptômes peuvent inclure de la fièvre, de la toux et un essoufflement. Dans les cas les plus graves, l’infection peut provoquer une pneumonie ou des difficultés respiratoires. Plus rarement, la maladie peut être mortelle.

Ces symptômes sont comparables à ceux de la grippe (influenza) ou d’un rhume banal, des maladies beaucoup plus courantes que la COVID-19, d’où la nécessité de procéder à des examens afin de confirmer qu’une personne est bien atteinte de la COVID-19. Dans tous les cas, il est important de se rappeler que les principales mesures de prévention restent les mêmes : il convient de se laver fréquemment les mains et d’observer une hygiène respiratoire (se couvrir la bouche et le nez avec le pli du coude ou un mouchoir en cas de toux ou d’éternuement, puis jeter le mouchoir dans une poubelle fermée). Par ailleurs, n’oubliez pas qu’il est possible de se faire vacciner contre la grippe, donc assurez-vous que votre enfant et vous êtes à jour dans vos vaccins.</string>
    <string name="menu_symptoms">Symptômes</string>
    <string name="emergency_prevent_1">1re étape : Mouillez-vous les mains à l’eau courante.</string>
    <string name="emergency_prevent_2">2e étape : Appliquez suffisamment de savon pour recouvrir vos mains mouillées.</string>
    <string name="emergency_prevent_3">3e étape : Frottez toute la surface de vos mains, sans oublier le dos des mains et les espaces entre les doigts et sous les ongles, pendant au moins 20 secondes.</string>
    <string name="emergency_prevent_4">4e étape : Rincez-vous soigneusement les mains à l’eau courante.</string>
    <string name="emergency_prevent_5">5e étape : Séchez-vous les mains avec un linge propre ou avec une serviette à usage unique.</string>
</resources>