<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <View
                android:layout_width="6dp"
                android:layout_height="6dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:background="@drawable/ic_circle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="12dp"
                android:text="@string/emergency_prevent_1"
                android:textColor="@color/colorBlack"
                app:fontFamily="@font/quicksand_light" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <View
                android:layout_width="6dp"
                android:layout_height="6dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:background="@drawable/ic_circle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="12dp"
                android:text="@string/emergency_prevent_2"
                android:textColor="@color/colorBlack"
                app:fontFamily="@font/quicksand_light" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <View
                android:layout_width="6dp"
                android:layout_height="6dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:background="@drawable/ic_circle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="12dp"
                android:text="@string/emergency_prevent_3"
                android:textColor="@color/colorBlack"
                app:fontFamily="@font/quicksand_light" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <View
                android:layout_width="6dp"
                android:layout_height="6dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:background="@drawable/ic_circle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="12dp"
                android:text="@string/emergency_prevent_4"
                android:textColor="@color/colorBlack"
                app:fontFamily="@font/quicksand_light" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <View
                android:layout_width="6dp"
                android:layout_height="6dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:background="@drawable/ic_circle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="12dp"
                android:text="@string/emergency_prevent_5"
                android:textColor="@color/colorBlack"
                app:fontFamily="@font/quicksand_light" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>