<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite">

    <androidx.cardview.widget.CardView
        android:id="@+id/cards"
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:layout_margin="8dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:elevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@color/colorBlack"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/flag"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="5dp"
                    app:layout_constraintEnd_toStartOf="@+id/textView_country"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@android:drawable/ic_menu_mapmode" />

                <TextView
                    android:id="@+id/textView_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:paddingRight="4dp"
                    android:paddingLeft="4dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:fontFamily="@font/helvetica"
                    android:textStyle="bold"
                    android:textColor="@color/colorWhite"
                    android:text="Country Name" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorWhite"
                        android:text="@string/cases"
                        android:layout_gravity="center"/>

                    <TextView
                        android:id="@+id/number_of_cases"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:fontFamily="@font/helvetica"
                        android:textAlignment="center"
                        android:gravity="center_horizontal"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/colorOrange"
                        android:text="1XXXXXX" />

                    <TextView
                        android:id="@+id/today_cases"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:gravity="center_horizontal"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/colorOrange"
                        android:text="New Cases" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recovered"
                        android:textColor="@color/colorWhite"
                        android:layout_gravity="center"/>

                    <TextView
                        android:id="@+id/number_of_recovered"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:fontFamily="@font/helvetica"
                        android:textAlignment="center"
                        android:gravity="center_horizontal"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/colorGreen"
                        android:text="Total Cases" />



                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/deceased"
                        android:textColor="@color/colorWhite"
                        android:layout_gravity="center"/>

                    <TextView
                        android:id="@+id/number_of_deaths"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:fontFamily="@font/helvetica"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:gravity="center_horizontal"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/colorRed"
                        android:text="Total Cases" />

                    <TextView
                        android:id="@+id/todays_deaths"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:gravity="center_horizontal"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/colorRed"
                        android:text="New Cases" />



                </LinearLayout>



            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>